Work on reuse compliance and using Opal

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
+*~
+*.~*
+*.bak
+dist*
+tmp*
+icon-src/raw
+TODO
+
+libs/opal-translations
+libs/opal-docs
+
 build*
 *.pro.user
 reverse
 rpm/*.spec
 rpm/*.spec.*
-dist
-*.bak
 raw/strings/*.clean
 raw/strings/strings
 liverunner*
