--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# This file is part of Swiss Meteo.
+# SPDX-License-Identifier: GPL-3.0-or-later
+# SPDX-FileCopyrightText: 2018-2022  Mirian Margiani
+
 *~
 *.~*
 *.bak
