--- a/rpm/harbour-swissmeteo.yaml
+++ b/rpm/harbour-swissmeteo.yaml
@@ -3,7 +3,7 @@
 # SPDX-FileCopyrightText: 2018-2022  Mirian Margiani
 
 Name: harbour-swissmeteo
-Summary: Unofficial client to the Swiss Meteorological Service (Swiss Meteo)
+Summary: Unofficial client to the Swiss Meteorological Service (MeteoSwiss)
 Version: 1.3.1
 Release: 2
 # The contents of the Group field should be one of the groups listed here:
@@ -14,7 +14,7 @@ License: GPL-3.0-or-later
 Sources:
 - '%{name}-%{version}.tar.bz2'
 Description: |
-  Swiss Meteo is an unofficial client to weather forecast services provided by
+  Swiss Meteo is a non-official client to weather forecast services provided by
   the Federal Office of Meteorology and Climatology (MeteoSwiss). Forecasts are
   available offline and updated every hour.
 Configure: none
