--- a/rpm/harbour-forecasts.yaml
+++ b/rpm/harbour-forecasts.yaml
@@ -1,15 +1,15 @@
-# This file is part of Swiss Meteo.
+# This file is part of Forecasts for SailfishOS.
 # SPDX-License-Identifier: GPL-3.0-or-later
 # SPDX-FileCopyrightText: 2018-2022  Mirian Margiani
 
-Name: harbour-swissmeteo
-Summary: Unofficial client to the Swiss Meteorological Service (MeteoSwiss)
+Name: harbour-forecasts
+Summary: Meteorological forecasts (weather, pollen, etc.) from different providers
 Version: 1.3.1
 Release: 2
 # The contents of the Group field should be one of the groups listed here:
 # https://github.com/mer-tools/spectacle/blob/master/data/GROUPS
 Group: Qt/Qt
-URL: https://github.com/ichthyosaurus/harbour-swissmeteo
+URL: https://github.com/ichthyosaurus/harbour-forecasts
 License: GPL-3.0-or-later
 Sources:
 - '%{name}-%{version}.tar.bz2'
