--- a/rpm/harbour-forecasts.yaml
+++ b/rpm/harbour-forecasts.yaml
@@ -8,15 +8,19 @@ Version: 1.3.1
 Release: 2
 # The contents of the Group field should be one of the groups listed here:
 # https://github.com/mer-tools/spectacle/blob/master/data/GROUPS
-Group: Qt/Qt
+Group: Applications/Internet
 URL: https://github.com/ichthyosaurus/harbour-forecasts
 License: GPL-3.0-or-later
 Sources:
 - '%{name}-%{version}.tar.bz2'
 Description: |
-  Swiss Meteo is a non-official client to weather forecast services provided by
-  the Federal Office of Meteorology and Climatology (MeteoSwiss). Forecasts are
-  available offline and updated every hour.
+  Forecasts for SailfishOS shows various meteorological forecasts from different
+  providers in an easy to use interface. All forecasts are available offline and
+  are updated in regular intervals.
+
+  Available providers include MeteoSwiss (Swiss Federal Office of Meteorology and
+  Climatology), DWD (German Weather Service), and Yr.no (Norwegian Meteorological
+  Institute).
 Configure: none
 Builder: qmake5
 QMakeOptions:
