--- a/harbour-forecasts.desktop
+++ b/harbour-forecasts.desktop
@@ -14,9 +14,9 @@ Name=Forecasts
 # abbreviated by the system. As a rule-of-thumb, around 15 Latin characters
 # should be the limit. If your language uses a different script than Latin,
 # please test it before submitting your translation.
-Name[de]=Schweizer Meteo
-Name[fr]=Météo suisse
-Name[it]=Meteo elvetico
+Name[de]=Wetterbericht
+Name[fr]=Météo
+Name[it]=Meteo
 Name[en]=Forecasts
 
 [X-Sailjail]
